--- a/medicine_fonter/public/index.html
+++ b/medicine_fonter/public/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="renderer" content="webkit">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-  <link rel="stylesheet" href="./css/reset.css" type="text/css">
   <title><%= webpackConfig.name %></title>
 </head>
-<body>
+<body style="padding: 0; margin: 0;overflow-y: scroll">
 <div id="app"></div>
 </body>
 </html>
